# ImageToAsciiConverter

./: CMakeLists.txt  README.md  main.cpp
imageConverterPackage/: ImageConverter.cpp  ImageConverter.h
userImageControllerPackage/: UserImageController.cpp  UserImageController.h
